+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.3 beta 1?
================================

*Release date: XX-XXX-2003*

Core and builtins
-----------------

- On 64-bit systems, a dictionary could contain duplicate long/int keys
  if the key value was larger than 2**32.  See SF bug #689659.

Extension modules
-----------------

- Made user requested changes to the itertools module.
  Subsumed the times() function into repeat().
  Added chain() and cycle().

Library
-------

- os.listdir() now returns Unicode strings on platforms that set
  Py_FileSystemDefaultEncoding, for file names that are not representable
  in ASCII.  (This currently only affects MacOS X; on Windows versions
  with wide file name support os.listdir() already returned Unicode
  strings.)

- Distutils: both 'py_modules' and 'packages' keywords can now be specified
  in core.setup().  Previously you could supply one or the other, but
  not both of them.  (SF patch #695090 from Bernhard Herzog)

Tools/Demos
-----------

TBD

Build
-----

- Fix build problems when _iconv_codec failed.  (SF bug #690012.)

- Fix problem building on OSF1 because the compiler only accepted
  preprocessor directives that start in column 1.  (SF bug #691793.)

C API
-----

TBD

New platforms
-------------

TBD

Tests
-----

- test_timeout now requires -u network to be passed to regrtest to run.
  See SF bug #692988.

Windows
-------

TBD

Mac
---

- os.listdir() now may return Unicode strings on MacOS X. See the general
  news item under "Library".

- A new method MacOS.WMAvailable() returns true if it is safe to access
  the window manager, false otherwise.
  
- EasyDialogs dialogs are now movable-modal.


What's New in Python 2.3 alpha 2?
=================================

*Release date: 19-Feb-2003*

Core and builtins
-----------------

- Negative positions returned from PEP 293 error callbacks are now